tests/cases/should_fail/literals/malformed_list_literal.stderr
error: encountered unclosed delimiter `[`, add a `]` after the inner expression
 --> $DIR/malformed_list_literal.hash:1:5
1 |   k = [1,
  |       ^ here
